Responsive overflow fix

--- a/media.css
+++ b/media.css
@@ -20,6 +20,7 @@
 
     * {
         font-size: 12px;
+        outline: red 0.5px solid;
     }
 
     .video-frame iframe {
@@ -74,6 +75,20 @@
         flex-direction: column;
         justify-content: center;
         padding-left: 0%;
+        width: 95vw !important;
+        overflow: hidden !important;
+    }
+    .companytext{
+        text-align: center !important;
+    }
+
+    .companylogos{
+        width: 90vw;
+        overflow: hidden;
+        background-color: antiquewhite;
+        margin: auto 0px !important;
+        gap: 5px;
+        width: 90vw !important;
     }
 
     .bento {
